# pr-test-automator-local

./: .gitignore  MIGRATION-v0.2.0a1.md  MIGRATION-v0.2.0a2.md  MIGRATION-v0.2.0a3.md  MIGRATION-v0.2.0a4.md  MIGRATION-v0.2.0a5.md  MIGRATION-v0.2.0a6.post1.md  MIGRATION-v0.2.0a6.post2.md  MIGRATION-v0.2.0a6.post3.md  MIGRATION-v0.2.0a6.post4.md  README.md  pyproject.toml
.venvs/: pyvenv.cfg
examples/: programmatic.py
pr-test-automator-local-v0.2.0a6/: MIGRATION-v0.2.0a6.md
pr-test-automator-local-v0.2.0a6/src/pr_test_automator_local/: _logging.py  llm_bridge.py
pr-test-automator-local-v0.2.0a6/src/pr_test_automator_local/languages/: __init__.py  registry.py
pr-test-automator-local-v0.2.0a6/src/pr_test_automator_local/languages/kotlin/: handler.py  prompts.py  runner.py
pr-test-automator-local-v0.2.0a6/src/pr_test_automator_local/steps/: test_runner.py
pr-test-automator-local-v0.2.0a6/src/pr_test_automator_local/utils/: __init__.py
src/pr_test_automator_local/: __init__.py  __main__.py  cli.py  config.py  llm_bridge.py  models.py  orchestrator.py
src/pr_test_automator_local/languages/: __init__.py  base.py
src/pr_test_automator_local/languages/java/: __init__.py  analyzer.py  handler.py
src/pr_test_automator_local/languages/kotlin/: __init__.py  analyzer.py  extractor.py  handler.py  merger.py  prompts.py  runner.py
src/pr_test_automator_local/languages/python/: __init__.py  analyzer.py  finder.py  handler.py  prompts.py  runner.py
src/pr_test_automator_local/steps/: __init__.py  code_analyzer.py  failure_fixer.py  local_diff_reader.py  test_committer.py  test_finder.py  test_generator.py  test_runner.py
src/pr_test_automator_local/utils/: diff_parser.py  exceptions.py  test_parser.py
tests/: test_compact_rendering.py  test_diff_hunk.py  test_java.py  test_kotlin.py  test_kotlin_extractor.py  test_kotlin_merger.py  test_kotlin_prompts.py  test_kotlin_runner.py  test_kotlin_test_file_search.py  test_languages.py  test_parsers.py  test_post4_changes.py  test_uncommitted_warning.py  test_v0_2_0_bug_fixes.py
