[project]
name = "pr-test-automator-local"
version = "0.2.0"
description = "Generate tests locally using Claude Code (no Anthropic API key required). Supports Python (pytest) and Kotlin (JUnit 5 + MockK + Strikt; in alpha)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["pytest", "junit", "kotlin", "mockk", "claude-code", "test-generation", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    # Kotlin parsing — used by languages/kotlin/analyzer.py. Loaded lazily
    # (only when a .kt file is actually being parsed), so Python-only users
    # only pay the install-size cost (~5MB), not runtime memory.
    "tree-sitter>=0.21.0",
    "tree-sitter-kotlin>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]

[project.scripts]
pr-test-automator-local = "pr_test_automator_local.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]
